<resources>
    <string name="app_name">梦酒</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">账单</string>
    <string name="title_notifications">会员</string>
    <string name="title_myorder">我的</string>
    <string name="title_splash">欢迎进入梦酒</string>
    <string name="banquan_splash">© 最终解释权归梦酒所有</string>
    <string name="login_username">用户名</string>
    <string name="login_passworld">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_find_passworld">找回密码</string>
    <string name="login_ok_passworld">确认密码</string>
    <string name="login_phone">手机号</string>
    <string name="register_man">男</string>
    <string name="register_woman">女</string>
    <string name="register_xingbie">性别:</string>
    <string name="register_fanhui">返回</string>
    <string name="login_re">注册会员</string>
    <string name="login_lo">登录会员</string>
    <string name="re_keep">保密</string>
    <string name="my_dd">我的订单</string>
    <string name="my_jp">我的收藏</string>
    <string name="my_kf">客服中心</string>
    <string name="my_qb">钱包</string>
    <string name="my_yhj">优惠券</string>
    <string name="my_sz">设置</string>
    <string name="fragment_dashbord_quanbu">全部</string>
    <string name="fragment_dashbord_tobeplaced">待下单</string>
    <string name="fragment_dashbord_tobedelivered">待配送</string>
    <string name="fragment_dashbord_tobeevaluated">待评价</string>
    <string name="fragment_dashbord_complete">完成</string>
    <string name="fragment_dashbord_recentorders">最近订单</string>
    <string name="fragment_dashbord_placeoforigin">产地：</string>
    <string name="fragment_dashbord_rmb">￥</string>
    <string name="fragment_dashbord_quantity">数量：</string>
    <string name="fragment_dashbord_total">总计：￥</string>
    <string name="fragment_dashbord_settlement">结算</string>
    <string name="fragment_dashbord_checkall">全选</string>
    <string name="fragment_home_coffee">咖啡</string>
    <string name="fragment_home_drink">饮品</string>
    <string name="fragment_home_winelist">酒</string>
    <string name="fragment_home_service">服务</string>
    <string name="fragment_notifications_rememberpassword">记住密码</string>
    <string name="all_shanchu">删除</string>
    <string name="root_fail_text">请输入用户名！</string>
    <string name="root_fail_text1">请输入密码！</string>
    <string name="myorderwddd">您目前还没有订单哟！</string>
    <string name="My_collection">我的收藏</string>
    <string name="fenli">类别:</string>
    <string name="pf">评分:</string>
    <string name="jjd">酒精度:</string>
    <string name="miaos">描述:</string>
</resources>
